issue: header shadow not infront of page items. fix: update header items z-index to place infront of page items

--- a/app/frontend/packs/styles/base/_page.scss
+++ b/app/frontend/packs/styles/base/_page.scss
@@ -30,6 +30,7 @@
   margin-bottom: 10px;
   position: relative;
   width: 100%;
+  z-index: 2;
 }
 
 .header-image {
@@ -42,7 +43,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: -1;
+  z-index: 1;
   
   img {
     height: 100%;
